Fixed responsive issue in restake popup ticket 1562

--- a/public/assets/scss/core/swap-token.scss
+++ b/public/assets/scss/core/swap-token.scss
@@ -17,7 +17,15 @@
             width: 70px;
         }
     }
+    .img-size-succ {
+    img {
+        @media #{$max-lg}{
+            width: 140px;
+        }
+    }
 }
+}
+
 .butns-sec{
     .primary-btn{
         background: $body-bg-800;
