UI issues fixed -> Jira ticket IDs -> 1562,1608

--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -1,6 +1,6 @@
 body.modal-open {
     .main-header{
-        padding-right: 17px;
+        // padding-right: 17px;
         @media #{$min-xxxl}{
             padding-right: 19px;
         }
