fixed popup [sr-1705], fixed css [sr-1514]

--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -947,7 +947,9 @@ body {
 }
 @media only screen and (max-width: 991.98px){
     .shib-popup .modal-content {
-        height: 75%;
+        // height: 75%;
+        height: auto;
+        // min-height: 400px;
     }
     .modal.show .modal-dialog{
         height: 100%;
