--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -682,3 +682,7 @@
     }  
 }
 /** Popup style end **/
+.bridge_form_sec select.form-select {
+    background-color: #e9e9ec;
+    border: none;
+}
