--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -686,3 +686,10 @@
     background-color: #e9e9ec;
     border: none;
 }
+
+.myTipsArea{
+    margin-top: 15px;
+    border-top: 1px solid #EAEAE8;
+    padding-top: 20px;
+}
+/** Popup style end **/
