--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -693,4 +693,14 @@
     padding-top: 20px;
     text-align: center;
 }
+
+.myBackBtnInTM{
+    position: absolute;
+    top: -55px;
+    left: 30px;
+    @media #{$max-sm}{
+        top: -35px;
+    left: 5px;
+    }
+}
 /** Popup style end **/
