--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1189,9 +1189,12 @@ input:checked + .slider:before {
     height: 680px;
     @media #{$max-xxl} {
       height: 600px;
+      // height: 585px;
     }
     @media #{$max-xl} {
       height: 580px;
+    // height:auto;
+      // height: 544px;
     }
   }
 
