--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3727,11 +3727,11 @@ input:-internal-autofill-selected {
 }
 .block-fix.tb-ubd .table-responsive {
   height: 580px;
-  overflow-y: auto;
+  overflow: auto;
 }
-.block-fix.tb-ubd .table-responsive::-webkit-scrollbar {
-  display: none;
-}
+// .block-fix.tb-ubd .table-responsive::-webkit-scrollbar {
+//   display: none;
+// }
 
 // /* Track */
 // .block-fix.tb-ubd .table-responsive::-webkit-scrollbar-track {
