--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -974,6 +974,15 @@ tr.no_record_wrapper {
 .tool-desc {
     text-transform: capitalize;
 }
+h3.ff-mos.small_warning_heading {
+    font-size: 20px;
+    color: var(--bs-orange);
+    margin-top: 20px;
+    margin-bottom: 12px;
+}
+p.small_warning_text.ff-mos {
+    font-weight: 400;
+}
 td.no_record img{
     margin: auto;
     position: absolute;
