--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3732,31 +3732,25 @@ input:-internal-autofill-selected {
   height: 580px;
   overflow: auto;
 }
-// .block-fix.tb-ubd .table-responsive::-webkit-scrollbar {
-//   display: none;
-// }
+.block-fix.tb-ubd .table-responsive::-webkit-scrollbar {
+  width:8px;
+  height: 4px;
+}
 
-// /* Track */
-// .block-fix.tb-ubd .table-responsive::-webkit-scrollbar-track {
-//   box-shadow: inset 0 0 5px grey;
-//   border-radius: 4px;
-//   // margin-top: 67.5px;
-//   // margin-bottom: 35px;
-//   // padding-top: 30px;
-// }
+/* Track */
+.block-fix.tb-ubd .table-responsive::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 4px;
+}
 
-// /* Handle */
-// .block-fix.tb-ubd .table-responsive::-webkit-scrollbar-thumb {
-//   background: linear-gradient(180deg, #f06500 0%, #f28b03 100%);
-//   border-radius: 10px;
-//   margin-top: 50px !important;
-//   margin-bottom: 50px !important;
-// }
-// @media (max-width:767px){
-//   .block-fix.tb-ubd .table-responsive::-webkit-scrollbar {
-//     display: block;
-//   }
-// }
+/* Handle */
+.block-fix.tb-ubd .table-responsive::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #f06500 0%, #f28b03 100%);
+  border-radius: 10px;
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
+}
+
 .header-overide {
   .fx-txt {
     .grey-txt {
