--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -668,6 +668,9 @@ ul {
         margin-right: 0;
     }
 }
+.shib-comun-section.grid-pad .img-fluid {
+    border-radius: 12px;
+}
 .btn-sm {
     padding: 5px 10px;
     border-radius: 5px;
