--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2917,13 +2917,13 @@ input:-internal-autofill-selected {
 .ff-mos .tool-desc {
   position: absolute;
   background: #fff;
-  left: 48%;
+  left: 46%;
   z-index: 1;
-  width: 100%;
+  width: auto;
   color: #000;
   padding: 10px;
   font-size: 13px;
-  top: -35%;
+  top: -17%;
   display: none;
   border-radius: 5px;
   font-weight: 400;
@@ -2945,10 +2945,10 @@ input:-internal-autofill-selected {
   border-color: #fff transparent;
   position: absolute;
   bottom: auto;
-  -webkit-transform: rotate(90deg);
+  -webkit-transform: rotate(90deg) translate(-50%);
   border-width: 14px 10px 0;
-  left: -4%;
-  top: 23px;
+  top: 57%;
+  left: -12%;
 }
 .innerDivBgBlack > div {
   background-color: black !important;
