minor UI change

--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -501,6 +501,9 @@ ul {
         color: #596380;
       }
 }
+.cmn_dasdrd_table .table th:first-child {
+    width: 20%;
+}
 .pop_main_h{
     margin-bottom: 25px;
 }
