manage token list

--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -19,7 +19,7 @@ body.modal-open {
   right: 0;
   z-index: 999;
   bottom: auto;
-  background-color: transparent;
+  background-color: #0C0F17;
   &.sticky-header {
     background-color: $body-bg;
     // position: sticky;
