--- a/public/assets/scss/core/_delegator-validator.scss
+++ b/public/assets/scss/core/_delegator-validator.scss
@@ -33,6 +33,7 @@
         top: 10%;
         left: 0;
         max-width: 130px;
+        z-index: 0;
         @media #{$max-xxxl}{
             top: 20%;
             max-width: 100px;
