--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2152,6 +2152,7 @@ input:checked + .slider:before {
         border-radius: 100%;
         background: #f06700;
         z-index: 1;
+        display: none;
       }
     }
     .progress {
