--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -23,6 +23,10 @@
 }
 // card-style
 
+.walletconnect-modal__footer a {
+  color: #898d97 !important;
+}
+
 .cus-card-800 {
   background: #151b28;
   border-radius: 25px;
