--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2132,7 +2132,7 @@ input:checked + .slider:before {
       padding: 4px 12px 1px;
       border-radius: 30px;
       position: absolute;
-      bottom: -48px;
+      bottom: -31px;
       font-weight: bold;
       color: #fff;
       text-align: center;
@@ -2158,6 +2158,7 @@ input:checked + .slider:before {
         border-radius: 100%;
         background: #f06700;
         z-index: 1;
+        display: none;
       }
     }
     .progress {
