--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -1257,6 +1257,7 @@ td.no_record img {
 @media (max-width: 576px) {
   .modal-content .primary-btn {
     min-height: 55px;
+    line-height: 35px;
   }
   .modal-content .cmn_modal.val_popups .primary-btn {
     min-height: auto;
