--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -20,6 +20,7 @@
     border-radius: 22px;
   }
 }
+
 .left-box {
   margin-top: 30px;
   .block-card {
@@ -28,6 +29,14 @@
     flex-wrap: wrap;
     height: 100%;
     justify-content: space-between;
+  }
+}
+@media (max-width:1300px){
+  .wrap_txt {
+    width: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 .left-box {
