--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -205,6 +205,12 @@ h6 {
     font-size: 13px;
   }
 }
+.fs-16{
+  font-size: 16px;
+  @media #{$max-lg} {
+    font-size: 14px;
+  }
+}
 p {
   color: rgba(14, 14, 14, 0.89);
   color: rgba($white, 0.89);
