added Ui changes for node setup logo

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3044,6 +3044,12 @@ input:-internal-autofill-selected {
     top: 17px;
   }
 }
+
+.val-logo-text {
+  font-size: 14px;
+  margin-left: 88px;
+  color: #f17601;
+}
 .ff-mos .get-info {
   background-color: #f17601;
   padding: 1px 9px;
